mdapi/Custom/objects/QC_Audit__c.object
<CustomObject>
    <description>This is part of the Rehab deployment and is used to facilitate the audit process at the completion of the rehab project.</description>
    <fields>
        <fullName>Audit_Assigned_to_QC_Auditor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send an email alert to the QC auditor to let them know them they have been assigned a QC audit.</inlineHelpText>
        <label>Audit Assigned to QC Auditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Resolution_Date__c</fullName>
        <label>Audit Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Back_End_Supervisor_Email__c</fullName>
        <formula>Rehab__r.Back_end_Supervisor__r.Email</formula>
        <label>Back End Supervisor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Supervisor__c</fullName>
        <formula>Rehab__r.Back_end_Supervisor__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back-End Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked an e-mail is sent to the General Contractor and The Back End Supervisor on the QC Audit.</description>
        <inlineHelpText>Check to send Email</inlineHelpText>
        <label>Communicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Audit_Assigned_to_QC_Auditor__c</fullName>
        <label>Date Audit Assigned to QC Auditor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rehab_Became_QC_Ready__c</fullName>
        <formula>Rehab__r.Date_Rehab_Stage_Moved_to_QC_Ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Rehab Became QC Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date Audit Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deficiencies_Judgement_Notes__c</fullName>
        <label>Judgment Deficiencies Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deficiencies_Judgement__c</fullName>
        <label>Judgment Deficiencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deficiencies_Open__c</fullName>
        <label>Deficiencies - Open</label>
        <summaryFilterItems>
            <field>QC_Audit_Deficiencies__c.Resolved_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Audit_Deficiencies__c.QC_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deficiencies_PTL_Notes__c</fullName>
        <label>PTL Deficiencies Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deficiencies_PTL__c</fullName>
        <label>PTL Deficiencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deficiencies_PunchList_Notes__c</fullName>
        <label>Punchlist Deficiencies Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deficiencies_Total__c</fullName>
        <label>Deficiencies - Total</label>
        <summaryFilterItems>
            <field>QC_Audit_Deficiencies__c.Type__c</field>
            <operation>equals</operation>
            <value>PTL, Punchlist, Judgement</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Audit_Deficiencies__c.QC_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_completion_date__c</fullName>
        <label>Estimated completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GC_Company_Email__c</fullName>
        <formula>Rehab__r.General_Contractor__r.Company_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GC Company Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor__c</fullName>
        <formula>Rehab__r.General_Contractor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Contractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_email__c</fullName>
        <formula>Rehab__r.Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Contractor email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judgement_Issues_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Judgement Issues Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Judgement_Resolution_Comments__c</fullName>
        <label>Judgment Resolution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT (Rehab__r.Portfolio__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Deficiencies_Judgement__c</fullName>
        <label># Deficiencies - Judgment</label>
        <summaryFilterItems>
            <field>QC_Audit_Deficiencies__c.Type__c</field>
            <operation>equals</operation>
            <value>Judgement, Judgment</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Audit_Deficiencies__c.QC_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Deficiencies_PTL__c</fullName>
        <label># Deficiencies - PTL</label>
        <summaryFilterItems>
            <field>QC_Audit_Deficiencies__c.Type__c</field>
            <operation>equals</operation>
            <value>PTL</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Audit_Deficiencies__c.QC_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Deficiencies_Punchlist__c</fullName>
        <label># Deficiencies - Punchlist</label>
        <summaryFilterItems>
            <field>QC_Audit_Deficiencies__c.Type__c</field>
            <operation>equals</operation>
            <value>Punchlist</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Audit_Deficiencies__c.QC_Audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Occupied_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occupied @ Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTL_Issues_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTL Issues Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTL_Resolution_Comments__c</fullName>
        <label>PTL Resolution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Rehab__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Rehab__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <formula>Rehab__r.Portfolio__r.Property_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Rehab__r.Property_State__c</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <formula>Rehab__r.Property_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PunchList_Deficiencies__c</fullName>
        <label>Punchlist Deficiencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punchlist_Issues_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punchlist Issues Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punchlist_Resolution_Comments__c</fullName>
        <label>Punchlist Resolution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QC Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (Rehab__r.Portfolio__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab_Stage__c</fullName>
        <formula>TEXT( Rehab__r.Stage__c )</formula>
        <label>Rehab Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab__c</fullName>
        <label>Rehab</label>
        <referenceTo>Rehab__c</referenceTo>
        <relationshipLabel>QC Audit</relationshipLabel>
        <relationshipName>QC_Audit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QC Assigned</fullName>
                </value>
                <value>
                    <fullName>QC Open</fullName>
                </value>
                <value>
                    <fullName>QC Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Deficiencies__c</fullName>
        <formula>PunchList_Deficiencies__c + Deficiencies_PTL__c + Deficiencies_Judgement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deficiencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totals_Days_Open_in_QC_Process__c</fullName>
        <formula>Audit_Resolution_Date__c -  Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Totals Days Open in QC Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totals_Days_in_QC_Process__c</fullName>
        <formula>Audit_Resolution_Date__c -     Rehab__r.Date_Rehab_Stage_Moved_to_QC_Ready__c</formula>
        <label># Totals Days in QC Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_QC_Audit__c</fullName>
        <label>Type of QC Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Signoff QC Audit</fullName>
                </value>
                <value>
                    <fullName>Post Rehab QC Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Code_Historical__c</fullName>
        <inlineHelpText>This was the Yardi code associated with this asset prior to securitization.</inlineHelpText>
        <label>Yardi Code - Historical</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <label>Yardi Property Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi__c</fullName>
        <formula>Rehab__r.Yardi_Code__c</formula>
        <label>Yardi Property Code (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Deficiencies_Total__c</fullName>
        <formula>Num_Deficiencies_PTL__c + Num_Deficiencies_Punchlist__c + Num_Deficiencies_Judgement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Deficiencies Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QC Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>QC_Auditor__c</columns>
        <columns>Property_Code__c</columns>
        <columns>General_Contractor__c</columns>
        <columns>Date__c</columns>
        <columns>Back_End_Supervisor__c</columns>
        <columns>Deficiencies_PTL__c</columns>
        <columns>PTL_Issues_Resolved__c</columns>
        <columns>PunchList_Deficiencies__c</columns>
        <columns>Punchlist_Issues_Resolved__c</columns>
        <columns>Deficiencies_Judgement__c</columns>
        <columns>Judgement_Issues_Resolved__c</columns>
        <columns>Total_Deficiencies__c</columns>
        <columns>Property_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_QC_Audits</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Property_Code__c</columns>
        <columns>Yardi__c</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>QC_Auditor__c</columns>
        <columns>Deficiencies_Judgement__c</columns>
        <columns>Deficiencies_PTL__c</columns>
        <columns>PunchList_Deficiencies__c</columns>
        <columns>Rehab__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Property_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All QC Audits</label>
    </listViews>
    <listViews>
        <fullName>Post_Sign_Off_QC_Audits</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>QC_Auditor__c</columns>
        <columns>Property_Code__c</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Property_State__c</columns>
        <columns>Rehab__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QC_Audit__c.Post_Rehab_QC_Audit</value>
        </filters>
        <label>Post Sign Off QC Audits</label>
    </listViews>
    <listViews>
        <fullName>QC_Audits_this_Week</fullName>
        <columns>NAME</columns>
        <columns>Rehab__c</columns>
        <columns>Property_Code__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Date__c</columns>
        <columns>QC_Auditor__c</columns>
        <columns>Num_Deficiencies_PTL__c</columns>
        <columns>Num_Deficiencies_Punchlist__c</columns>
        <columns>Num_Deficiencies_Judgement__c</columns>
        <columns>of_Deficiencies_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>QC Audits this Week</label>
    </listViews>
    <nameField>
        <displayFormat>QCAudit-{000}</displayFormat>
        <label>QC Audit Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC Audits</pluralLabel>
    <recordTypes>
        <fullName>Post_Rehab_QC_Audit</fullName>
        <active>true</active>
        <description>QC Audit used after property has been sent to leasing and is OTM</description>
        <label>2 - Post Rehab QC Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Signoff_QC_Audit</fullName>
        <active>true</active>
        <description>QC Audit used when Rehab is still active</description>
        <label>1 - Pre Signoff QC Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Open_Deficiencies</fullName>
        <active>true</active>
        <description>Prevent user from selecting the &quot;QC Closed&quot; status if the open deficiencies &gt; 0.</description>
        <errorConditionFormula>Deficiencies_Open__c  &gt;=  1 &amp;&amp;  (ISPICKVAL( Status__c , &quot;QC Closed&quot;) || NOT( ISBLANK( Audit_Resolution_Date__c ) ))</errorConditionFormula>
        <errorMessage>You are unable to close this Audit until you mark all deficiencies as completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unable_to_Create_Record_without_Auditor</fullName>
        <active>true</active>
        <description>A QC Audit can not be created if the QC Auditor field isn&apos;t populated</description>
        <errorConditionFormula>ISBLANK( QC_Auditor__c )</errorConditionFormula>
        <errorMessage>You can not save this record until a QC Auditer is selected</errorMessage>
    </validationRules>
</CustomObject>